# mod-audio-stream

./: CMakeLists.txt  Containerfile  README.md  audio_streamer_glue.cpp  audio_streamer_glue.h  mod_audio_stream.c  mod_audio_stream.h  stream_utils.cpp  stream_utils.h  ws_client.cpp  ws_client.h
.github/workflows/: ci.yml  integration.yml
test/: CMakeLists.txt  test.h  test_base64.cpp  test_base64_extra.cpp  test_utf8.cpp  test_ws_client.cpp  test_ws_uri.cpp
test/integration/: compose.yaml  run.sh  server.py
test/integration/freeswitch/autoload_configs/: modules.conf.xml
test/integration/freeswitch/dialplan/: default.xml
